/*
 * $Id: ChangeLog,v 1.657 2003/01/29 21:30:16 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2003-01-30 04:30 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
  Again, function declaration matching among those in header files and function
  bodies to enable creation of MSVC DLL.
  * include/hbapi.h
  * include/hbapifs.h
  * include/hbtrace.h
  * source/common/hbffind.c
  * source/common/hbtrace.c
  * source/rtl/datec.c
  * source/rtl/dates.c
  * source/rtl/langapi.c

2003-01-28 15:11 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed a typo.

  * source/rtl/cstr.prg
    ! Fixed 2 missing EXIT in recent optimization to SWITCH.

  * source/vm/hvm.c
    * Minor formatting.

2003-01-29 19:35 UTC-0200 Luiz Rafael Culik <culikr@uol.com.br>
  * doc/en/dbsdf.txt
    doc/en/dbdelim.txt
    ! Minor changes
  * doc/en/rddmisc.txt
    + Doc For Use and Index Commands
  + doc/en/defines.txt
    + Docs for #error,#command,#xcommand and the other preprocessor commands

2003-01-28 20:00 UTC-0200 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rdd/dbcmd.c
    ! Fixed initialization of dbLockInfo.itmRecID member to -1 on RLOCK() and FLOCK() functions;
      With RDDADS on Linux this cause an GPF on adslock() member of rddads when trying to compare
      a trash with 0

2003-01-28 08:12 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Minor fixed to add numeric support to recent fix to md_strAt() when searching for '.'

2003-01-28 00:27 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Minor fixed to recent fix to md_strAt() when searching for '.'

2003-01-27 00:02 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/thread.c
    ! Fixed a time slice rollover bug that could have caused miswaits in